Completada funcionalidad para eliminar primeros administradores. Implementado en las vistas de primer administrador y proveedor.